--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!--[if lt IE 9]> HTML5Shiv
-			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 
 </head>
 
 <body>
-	<h1>RockingJS</h1>
+	<!--<h1>RockingJS</h1>-->
 	<p>Select the module with properties to create a lib for you!</p>
-	<form action="download.html">
-		<label for="carousel">Carousel</label><input type="checkbox" name="carousel" />
-		<ul>
-			<li><label for="bullet">bullet</label><input type="checkbox" name="bullet" /></li>
-			<li><label for="pagination">pagination</label><input type="checkbox" name="pagination" /></li>
-			<li><label for="arrow">arrow</label><input type="checkbox" name="arrow" /></li>
-		</ul>
-		<label for="tab">Tab</label><input type="checkbox" name="tab" />
-		<ul>
-			<li><label for="horizontal">horizontal</label><input type="checkbox" name="horizontal" /></li>
-			<li><label for="dragable">dragable</label><input type="checkbox" name="dragable" /></li>
-		</ul>
+	<form action="rocking.js">
+		<div class="carousel">
+			<label for="carousel">Carousel</label><input type="checkbox" name="carousel" />
+			<ul>
+				<li><label for="bullet">bullet</label><input type="checkbox" name="bullet" /></li>
+				<li><label for="pagination">pagination</label><input type="checkbox" name="pagination" /></li>
+				<li><label for="arrow">arrow</label><input type="checkbox" name="arrow" /></li>
+			</ul>
+		</div>
+
+		<div class="tab">
+			<label for="tab">Tab</label><input type="checkbox" name="tab" />
+			<ul>
+				<li><label for="horizontal">horizontal</label><input type="checkbox" name="horizontal" /></li>
+				<li><label for="dragable">dragable</label><input type="checkbox" name="dragable" /></li>
+			</ul>
+		</div>
 		<input type="submit" value="submit" />
 	</form>
-	<script type="text/javascript" src="core.js"></script>
-	<script type="text/javascript" src="module/carousel.js"></script>
-	<script type="text/javascript" src="module/tab.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<!--<script type="text/javascript" src="/core.js"></script>
+	<script type="text/javascript" src="/module/carousel.js"></script>
+	<script type="text/javascript" src="/module/tab.js"></script>-->
+	<script type="text/javascript" src="/script.js"></script>
 </body>
 
 </html>
